# DiscordSocialSDKAIR

./: .gitignore  README.md  asconfig.json
sdk_wrapper/: CMakeLists.txt  FREInitializer.c
src/net/pyogenics/discordsocialsdk/: ActivityActionTypes.as  ActivityGamePlatforms.as  ActivityPartyPrivacy.as  ActivityTypes.as  AdditionalContentType.as  AudioModeType.as  AuthenticationCodeChallengeMethod.as  AuthenticationExternalAuthType.as  AuthorizationTokenType.as  ChannelType.as  DisclosureTypes.as  DiscordObjectState.as  DiscordSocialSDK.as  ErrorType.as  HttpStatusCode.as  LoggingSeverity.as  RelationshipType.as  StatusType.as
